--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,1 +1,435 @@
 // Header
+
+// Navbar
+
+.header {
+
+  &__bg-top {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+  }
+
+  &__bg-right {
+    position: absolute;
+    left: 0;
+    top: 64px;
+    z-index: -1;
+  }
+
+  &__section  {
+    margin-top: 135px;
+
+    @media (max-width: $breakpoint992) {
+      margin-top: 80px;
+    }
+  }
+
+  &__block {
+    max-width: 1047px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 35px;
+
+    @media (max-width: $breakpoint992) {
+      gap: 30px;
+    }
+
+    @media (max-width: $breakpoint768) {
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &__info {
+    flex: 0 1 646px;
+
+    @media (max-width: $breakpoint768) {
+      flex: 0 0 100%;
+
+    }
+
+    h1 {
+      font-style: normal;
+      font-weight: 800;
+      font-size: 60px;
+      line-height: 74px;
+      letter-spacing: -0.03em;
+      color: #000000;
+
+      @media (max-width: $breakpoint992) {
+        font-size: 50px;
+        max-width: 500px;
+      }
+
+      @media (max-width: $breakpoint480) {
+        font-size: 40px;
+        line-height: 50px;
+      }
+    }
+
+    p {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 30px;
+      letter-spacing: -0.02em;
+      color: #64607D;
+      max-width: 446px;
+      margin-top: 20px;
+    }
+  }
+
+  &__info-buttons {
+    display: flex;
+    margin-top: 50px;
+    gap: 50px;
+
+    @media (max-width: 839px) {
+      flex-direction: column;
+      width: 210px;
+      gap: 40px;
+    }
+
+    a {
+      transition: all .44s ease;
+
+      &:first-child {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 30px;
+        text-align: center;
+        letter-spacing: -0.02em;
+        color: #FFFFFF;
+        padding: 15px 36px;
+        background: #3734A9;
+        border-radius: 47px;
+
+        &:hover {
+          background-color: #483bfa;
+        }
+      }
+
+      &:last-child {
+        display: flex;
+        align-items: center;
+        gap: 11px;
+
+        img {
+          transition: all .7s ease;
+        }
+
+        &:hover {
+          img {
+            transform: rotate(360deg);
+          }
+        }
+
+        span {
+          font-style: normal;
+          font-weight: 600;
+          font-size: 17px;
+          line-height: 30px;
+          letter-spacing: -0.02em;
+          color: #3734A9;
+        }
+      }
+    }
+  }
+
+  &__form {
+    flex: 0 1 256px;
+    margin-top: 40px;
+
+    @media (max-width: $breakpoint768) {
+      flex: 1 1 100%;
+    }
+
+    h1 {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 30px;
+      letter-spacing: -0.02em;
+      color: #3734A9;
+    }
+    
+    input[type="email"], input[type="password"] {
+      width: 356px;
+      height: 60px;
+      margin-top: 24px;
+      padding: 16px 22px 14px 22px;
+      background: #FFFFFF;
+      border: 1px solid #DFE4F1;
+      border-radius: 5px;
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 30px;
+      letter-spacing: -0.02em;
+      color: #64607D;
+      opacity: 0.9;
+      
+      @media (max-width: $breakpoint992) {
+        width: 250px;
+      }
+
+      @media (max-width: $breakpoint768) {
+        width: 100%;
+      }
+
+      &::placeholder {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 30px;
+        letter-spacing: -0.02em;
+        color: #64607D;
+        opacity: 0.4;
+      }
+    }
+
+    input[type="submit"] {
+      margin-top: 24px;
+      width: 356px;
+      height: 60px;
+      text-align: center;
+      background: #FF7F5C;
+      border-radius: 5px;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 30px;
+      text-transform: uppercase;
+      color: #FFFFFF;
+      padding-top: 5px;
+      cursor: pointer;
+      transition: all .44s ease;
+
+      @media (max-width: $breakpoint992) {
+        width: 250px;
+      }
+
+      @media (max-width: $breakpoint768) {
+        width: 100%;
+      }
+
+      &:hover {
+        background: #f64c19;
+      }
+    }
+  }
+}
+
+
+nav {
+  overflow: hidden;
+}
+
+.navbar {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding-top: 35px;
+  padding-bottom: 15px;
+}
+
+.logo {
+  a {
+    color: white;
+  }
+}
+
+.hide__item {
+  display: none;
+
+  @media (max-width: $breakpoint480) {
+    display: block;
+  }
+}
+
+.menu {
+  display: flex;
+  margin-left: 95px;
+
+  @media (max-width: $breakpoint992) {
+    margin-left: 0;
+  }
+
+  &__right {
+
+    a {
+      transition: all .44s ease;
+
+      &:first-child {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: center;
+        color: #000000;
+        margin-right: 50px;
+
+        @media (max-width: $breakpoint480) {
+          display: none;
+
+        }
+
+        &:hover {
+          color: #483bfa;
+        }
+      }
+
+      &:last-child {
+        padding: 17px 35px 16px 35px;
+        background-color: #4F46BA;
+        border-radius: 10px;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        color: #fff;
+
+        @media (max-width: $breakpoint480) {
+          padding: 12px 20px 11px 20px;
+        }
+
+
+        &:hover {
+          background-color: #483bfa;
+        }
+      }
+    }
+  }
+
+
+  // .menu__item
+  &__item {
+    margin-left: 15px;
+  }
+
+  // .menu__item-link
+  &__item-link {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+    padding: 5px 10px;
+    transition: all .3s ease;
+
+    &:hover {
+      background-color: #483bfa;
+      color: white;
+      border-radius: 10px;
+    }
+  }
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+// Burger menu styles
+@media screen and (max-width: $burgerBreakpoint) {
+  // .menu
+  .menu {
+    position: fixed;
+    background: #131418;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+    display: none;
+
+    &.active {
+      display: flex;
+      left: 0;
+      top: 0;
+      height: 100vh;
+      width: 100vw;
+      flex-direction: column;
+      pointer-events: all;
+      justify-content: center;
+      align-items: center;
+      z-index: 22;
+      animation: fade 0.1s linear;
+    }
+  }
+
+  // .burger
+  .burger {
+    display: block;
+    position: relative;
+    height: 20px;
+    width: 30px;
+    z-index: 102;
+    cursor: pointer;
+
+    &.active-burger {
+      &:before {
+        background: $burgerActiveColor;
+        transform: rotate(45deg);
+        transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+        top: 8px;
+      }
+
+      &:after {
+        background: $burgerActiveColor;
+        transform: rotate(-45deg);
+        bottom: 10px;
+        transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+      }
+
+      & span {
+        transform: scale(0);
+      }
+    }
+
+    &:before,
+    &:after {
+      content: '';
+      position: absolute;
+      height: 2px;
+      width: 100%;
+      background: $burgerColor;
+      transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+    }
+
+    &:before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+
+    span {
+      position: absolute;
+      top: 9px;
+      right: 0;
+      width: 100%;
+      background: $burgerColor;
+      height: 2px;
+      transform: scale(1);
+      transition: cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.3s all;
+    }
+  }
+
+  // .menu__item
+  .menu__item {
+    margin-top: 15px;
+  }
+
+  // .menu__link
+  .menu__item-link {
+    color: white;
+  }
+}
+
